--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -60,6 +60,11 @@ ECL 0.9h
    libraries without need of the compiler. The current implementation only
    works on the intel architecture with GCC, but should be easily extended.
 
+ - There is now a simple implementation of callbacks, with a syntax similar to
+   that of CFFI:
+	(ffi:defcallback foo :int ((a :int))
+	   (1+ a))
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
