--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -7,6 +7,8 @@ ECL 0.9h
    high level routines (VECTOR-PUSH-EXTEND) to handle the vector of weak
    pointers to the files.
 
+ - MULTIPLE-VALUE-SETQ must output only the primary value.
+
 * Design:
 
  - Simplified the structure of the frame stack, removing redundant fields.
