--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -9,6 +9,9 @@ ECL 0.9h
 
  - MULTIPLE-VALUE-SETQ must output only the primary value.
 
+ - MAKE-CONDITION now accepts type specifiers such as '(AND SIMPLE-CONDITION
+   TYPE-ERROR).
+
 * Design:
 
  - Simplified the structure of the frame stack, removing redundant fields.
