--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -14,6 +14,9 @@ ECL 0.9h
 
  - LOAD can now load code from streams which are not associated to files.
 
+ - DISASSEMBLE now signals a TYPE-ERROR condition when the argument is neither
+   an extended function designator nor a lambda expression.
+
 * Design:
 
  - Simplified the structure of the frame stack, removing redundant fields.
