--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -25,6 +25,9 @@ ECL 0.9h
 
  - The command line option "-s" does not take any arguments.
 
+ - In ECL, all complex types are upgraded to (COMPLEX REAL). However, parts
+   SUBTYPEP did not apply this.
+
 * Design:
 
  - Simplified the structure of the frame stack, removing redundant fields.
