--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -35,6 +35,8 @@ ECL 0.9h
  - When a DEFMETHOD form had an incongruent lambda list, an internal error
    prevented ECL from writing the proper error message.
 
+ - SUBTYPEP formerly broken when handling (EQL #C(...))
+
 * Design:
 
  - Simplified the structure of the frame stack, removing redundant fields.
