--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -37,6 +37,9 @@ ECL 0.9h
 
  - SUBTYPEP formerly broken when handling (EQL #C(...))
 
+ - Fixed several type propagations: for instance, the compiler assumed that
+   SQRT of a real number is always real.
+
 * Design:
 
  - Simplified the structure of the frame stack, removing redundant fields.
