--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -32,6 +32,21 @@ ECL 0.9i
  - Trying to change the function definition of a symbol in a locked package
    results in a correctable error.
 
+ - All filesystem operations (opening files, checking directories, etc), now
+   merge the pathname not only with *default-pathname-defaults*, but also with
+   the output of SI:GETCWD. This way we ensure that all filenames are absolute
+   pathnames. [1]
+
+* Errors fixed:
+
+ - The intermediate output of the compiler is written in the directory in which
+   the output will reside. [1]
+
+
+* Notes:
+
+ [1] Both bugs are related.
+
 ;;; Local Variables: ***
 ;;; mode:text ***
 ;;; fill-column:79 ***
