--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -41,6 +41,14 @@ ECL 0.9i
    *DEFAULT-PATHNAME-DEFAULTS* but not with SI:GETCWD. In other words, according
    to ANSI, it does not get the pathname as seen by the operating system.
 
+ - C:BUILDER, C:BUILD-PROGRAM, etc, now accept :EPILOGUE-CODE to be a lisp
+   form. This form is read and evaluated at run time after initializing the
+   lisp core. A call to cl_shutdown() is automatically included afterwards for
+   simplicity.
+
+ - COMPILE-FILE-PATHNAME now accepts both :FASL and :FAS as type. They are
+   synonyms.
+
 * Errors fixed:
 
  - The intermediate output of the compiler is written in the directory in which
