--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -61,6 +61,11 @@ ECL 0.9i
  - Implemented the standard behavior of NO-APPLICABLE-METHOD. Before, ECL
    expected this function to simply fail and never return.
 
+ - --disable-shared works again in Mingw. The header file external.h has to be
+   modified at build time to remove a declaration "dllimport" which mingw does
+   not support in the statically linked code. MSVC++ does not seem to have a
+   problem with it, though.
+
 * Documentation:
 
  - The HTML manuals now use CSS for a more appealing look.
