--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -63,6 +63,9 @@ ECL 0.9i
  - Header files are now included with a prefix, as in #include <ecl/ecl.h>
    or #include <ecl/config.h> to avoid collisions with other system files.
 
+ - The function SI:PROCESS-COMMAND-ARGS has now a more flexible interface and
+   can be used by standalone programs with user supplied rules.
+
 * Errors fixed:
 
  - The intermediate output of the compiler is written in the directory in which
