--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -74,6 +74,9 @@ ECL 0.9i
    not mean that everything has been implemented, but it makes the implemented
    options accessible.
 
+ - Included support for multithreading under Windows/Cygwin (Thanks to Arthur
+   Smyles for pointing out the differences from Linux's pthreads)
+
 * Errors fixed:
 
  - The intermediate output of the compiler is written in the directory in which
