--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -103,6 +103,8 @@ ECL 0.9i
  - Callback functions are now 'static' so that the same names can be used
    in different files.
 
+ - New method for DOCUMENTATION to operate on slot-definition objects.
+
 * Documentation:
 
  - The HTML manuals now use CSS for a more appealing look.
