--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -105,6 +105,8 @@ ECL 0.9i
 
  - New method for DOCUMENTATION to operate on slot-definition objects.
 
+ - New slot options are now allowed, as well as new metaclass options.
+
 * Documentation:
 
  - The HTML manuals now use CSS for a more appealing look.
