--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -79,6 +79,15 @@ ECL 0.9i
 
  - New manual file for 'ecl-config' contributed by Peter Van Eynde.
 
+* MOP compatibility:
+
+ - SLOT-VALUE, SLOT-BOUNDP, etc, together with MOP SLOT*-USING-CLASS generic
+   functions now rely entirely on slot-definition objects.
+
+ - Effective slot definitions now have a "location" slot. Around methods for
+   COMPUTE-SLOTS assign a location to each slot definition that has allocation
+   :INSTANCE or :CLASS.
+
 * Errors fixed:
 
  - The intermediate output of the compiler is written in the directory in which
