--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -93,7 +93,12 @@ ECL 0.9i
    or use SLOT-VALUE. It should be set to NIL when one intends to redefine the
    SLOT-*-USING-CLASS methods.
 
- - Implemented [FUNCALLABLE-]STANDARD-INSTANCE-ACCESS.
+ - Implemented [FUNCALLABLE-]STANDARD-INSTANCE-ACCESS. They are synonyms for
+   SI:INSTANCE-REF and are, as such, inlined and _very_ unsafe. Use with care.
+
+ - Two nonstandard slots have been removed from standard-methods. Keeping track
+   of which methods were in a defgeneric function is done using the property
+   list of the methods.
 
 * Errors fixed:
 
