--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -4,7 +4,10 @@ ECL 0.9i
 * New platforms:
 
  - Patches in assembler code and GC headers to build ECL on Mac OSX/Intel
-   contributed by Brad Beveridge.
+   contributed by Brad Beveridge. This port relies on the version of the
+   GNU MP library shipped with DarwinPorts.
+
+ - ECL compiles and passes tests in OpenBSD/x86.
 
 * Visible changes:
 
@@ -84,6 +87,8 @@ ECL 0.9i
 
  - New manual file for 'ecl-config' contributed by Peter Van Eynde.
 
+ - NIL is no longer a valid specializer in a method.
+
 * MOP compatibility:
 
  - SLOT-VALUE, SLOT-BOUNDP, etc, together with MOP SLOT*-USING-CLASS generic
@@ -149,6 +154,23 @@ ECL 0.9i
  - The old conservative garbage collector works again. It now supports 64-bit
    architectures, though the memory is still limited to 32Mb of lisp data. In
    any case, this collector is only intended for small setups and OpenBSD.
+
+ - The compiler transformed &AUX variables into a LET* form. In doing so, all
+   declarations were propageted to the body of the LET* form, even those for
+   non-&AUX variables. This could lead to spurious warnings about IGNORE
+   declarations.
+
+ - Fix the scope of special declarations in lambda forms so that they do not
+   affect the initialization forms of optional, keyword and aux variables.
+   Sample code:
+	(defun foo (y)
+	  (flet ((faa (&key (x y))
+		   (declare (special y))
+		   x))
+	    (let ((y 4))
+	      (declare (special y))
+	      (faa))))
+   A form (FOO 3) produced 4 before the bug was fixed.
 
 * Documentation:
 
