--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -114,6 +114,11 @@ ECL 0.9i
    of which methods were in a defgeneric function is done using the property
    list of the methods.
 
+ - When a class inherits from two or more classes, slot definitions with the
+   same name must be merged. In particular, when a slot has the same name in
+   two parents, all accessors from all classes should be available for the
+   child.
+
 * Errors fixed:
 
  - The intermediate output of the compiler is written in the directory in which
