Use MAKE-LOAD-FORM to compile constants that do not have a readable printed representation (Brian Spilsbury)

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -108,6 +108,11 @@ ECL 0.9i
    OpenBSD & Ubuntu. You may need to supply appropiate LDFLAGS & CFLAGS for the
    configuration to detect the headers.
 
+ - ECL now can compile files with constants that do not print readably, such as
+   CLOS objects. In those cases, MAKE-LOAD-FORM is used to recreate these
+   constants. The only case where this fail is when the "unreadable" constant
+   is part of a circular structure (contributed by Brian Spilsbury).
+
 * MOP compatibility:
 
  - SLOT-VALUE, SLOT-BOUNDP, etc, together with MOP SLOT*-USING-CLASS generic
