--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -201,6 +201,9 @@ ECL 0.9i
 	      (faa))))
    A form (FOO 3) produced 4 before the bug was fixed.
 
+ - The compiler now admits THE forms with type (VALUES ...), though they are
+   ignored.
+
 * Documentation:
 
  - The HTML manuals now use CSS for a more appealing look.
