--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -227,6 +227,11 @@ ECL 0.9i
    FOO shadows the global macro definition. If compiled, MACRO-FUNCTION was
    unable to detect the shadowing definition. (B. Spilsbury)
 
+ - The compilation of function calls with more than 64 arguments produced wrong
+   code in some cases. The code for this has been reworked and unified with
+   code for multiple value calls and other structures such as unwind-protect
+   forms.
+
 * Documentation:
 
  - The HTML manuals now use CSS for a more appealing look.
