--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -132,6 +132,8 @@ ECL 0.9i
 
  - The compiler is slightly faster by avoiding use of EVAL.
 
+ - APROPOS, APROPOS-LIST and EXT:HELP* are now case insensitive.
+
 * MOP compatibility:
 
  - SLOT-VALUE, SLOT-BOUNDP, etc, together with MOP SLOT*-USING-CLASS generic
